render-wasm/src/render/svg/snapshots/render_wasm__render__svg__tests__exports_leaf_background_blur_as_foreign_object.snap
---
source: src/render/svg/tests.rs
expression: svg
---
<?xml version="1.0" encoding="utf-8" ?>
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100" height="80" viewBox="0 0 100 80"><foreignObject x="-20" y="-20" width="140" height="120"><div xmlns="http://www.w3.org/1999/xhtml" style="backdrop-filter:blur(6.2735023px);-webkit-backdrop-filter:blur(6.2735023px);clip-path:path(evenodd,'M20 20L120 20L120 100L20 100Z');height:100%;width:100%"></div></foreignObject>
	<rect fill="red" fill-opacity="0.70588237" width="100" height="80"/>
</svg>
