render-wasm/src/render/svg/snapshots/render_wasm__render__svg__tests__exports_nofill_text_with_outer_image_stroke.snap
---
source: src/render/svg/tests.rs
expression: svg
---
<?xml version="1.0" encoding="utf-8" ?>
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="101" height="106" viewBox="0 0 101 106"><defs><style type="text/css"><![CDATA[@font-face{font-family:"Source Sans Pro";font-style:normal;font-weight:400;src:url("fonts/sourcesanspro-regular.ttf") format("truetype");}]]></style><mask id="txtstrokemask0" maskUnits="userSpaceOnUse">
	<rect transform="translate(-155 -594)" x="-100000" y="-100000" width="200000" height="200000"/>
	<defs/>
	<text fill="none" stroke="white" stroke-width="20" stroke-miterlimit="4" transform="translate(-155 -594)" font-size="72" font-family="Source Sans Pro" x="165, 204.16406" y="669">
			Aa
	</text>
</mask><mask id="tmask1" maskUnits="userSpaceOnUse">
	<rect fill="white" transform="translate(-155 -594)" x="-100000" y="-100000" width="200000" height="200000"/>
	<text transform="translate(-155 -594)" font-size="72" font-family="Source Sans Pro" x="165, 204.16406" y="669">
			Aa
	</text>
</mask></defs><g mask="url(#tmask1)"><g mask="url(#txtstrokemask0)"><image href="images/test-fill.svg" x="119.5" y="604" width="172" height="86" preserveAspectRatio="xMidYMid slice" transform="matrix(1 0 0 1 -155 -594)"/></g></g></svg>
